--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -297,7 +297,10 @@
 
 ; PPC7450 has 3 integer units (for most integer insns) and one mul/div
 ; unit, which also does CR-logical insns and move to/from SPR.
-
+; It also has 4 vector units, one for each type of vector instruction.
+; However, we can only dispatch 2 instructions per cycle. 
+; We model this as saying that dispatching two of the same type of instruction
+; in a row incurs a single cycle delay.
 (define_function_unit "iu3" 3 0
   (and (eq_attr "type" "integer")
        (eq_attr "cpu" "ppc7450"))
@@ -317,26 +320,46 @@
   (and (eq_attr "type" "cr_logical")
        (eq_attr "cpu" "ppc7450"))
   1 1)
-(define_function_unit "viu1" 1 0
+(define_function_unit "vec_alu2" 2 0
   (and (eq_attr "type" "vecsimple")
        (eq_attr "cpu" "ppc7450"))
-  1 1)
-(define_function_unit "viu2" 1 0
+  1 2 [(eq_attr "type" "vecsimple")])
+(define_function_unit "vec_alu2" 2 0
+  (and (eq_attr "type" "vecsimple")
+       (eq_attr "cpu" "ppc7450"))
+  1 1 [(eq_attr "type" "!vecsimple")])
+(define_function_unit "vec_alu2" 2 0
   (and (eq_attr "type" "veccomplex")
        (eq_attr "cpu" "ppc7450"))
-  4 1)
-(define_function_unit "vfpu" 1 0
+  4 2 [(eq_attr "type" "veccomplex")])
+(define_function_unit "vec_alu2" 2 0
+  (and (eq_attr "type" "veccomplex")
+       (eq_attr "cpu" "ppc7450"))
+  4 1 [(eq_attr "type" "!veccomplex")])
+(define_function_unit "vec_alu2" 2 0
   (and (eq_attr "type" "veccmp")
        (eq_attr "cpu" "ppc7450"))
-  2 1)
-(define_function_unit "vfpu" 1 0
+  2 2 [(eq_attr "type" "veccmp")])
+(define_function_unit "vec_alu2" 2 0
+  (and (eq_attr "type" "veccmp")
+       (eq_attr "cpu" "ppc7450"))
+  2 1 [(eq_attr "type" "!veccmp")])
+(define_function_unit "vec_alu2" 2 0
   (and (eq_attr "type" "vecfloat")
        (eq_attr "cpu" "ppc7450"))
-  4 1)
-(define_function_unit "vpu" 1 0
+  4 2 [(eq_attr "type" "vecfloat")])
+(define_function_unit "vec_alu2" 2 0
+  (and (eq_attr "type" "vecfloat")
+       (eq_attr "cpu" "ppc7450"))
+  4 1 [(eq_attr "type" "!vecfloat")])
+(define_function_unit "vec_alu2" 2 0
   (and (eq_attr "type" "vecperm")
        (eq_attr "cpu" "ppc7450"))
-  2 1)
+  2 2 [(eq_attr "type" "vecperm")])
+(define_function_unit "vec_alu2" 2 0
+  (and (eq_attr "type" "vecperm")
+       (eq_attr "cpu" "ppc7450"))
+  2 1 [(eq_attr "type" "!vecperm")])
 
 ; PPC750 has two integer units: a primary one which can perform all
 ; operations and a secondary one which is fed in lock step with the first
@@ -9143,6 +9166,59 @@
    && ! MEM_VOLATILE_P (operands[0]) && ! MEM_VOLATILE_P (operands[2])
    && addrs_ok_for_quad_peep (XEXP (operands[0], 0), XEXP (operands[2], 0))"
   "stfq%U0%X0 %1,%0")
+;; APPLE LOCAL peephole2 to eliminate unneeded computation of FP const
+;; address in register.  If lo part of address is reused (i.e. reg0
+;; is not dead), make the change in the fp load anyway (for scheduling)
+;; but we switch the instructions in case op0==op1.
+;; (define_peephole2
+;;   [(set (match_operand:SI 0 "gpc_reg_operand" "")
+;; 	(lo_sum:SI (match_operand:SI 1 "gpc_reg_operand" "") 
+;; 		   (match_operand:SI 2 "" "")))
+;;    (set (match_operand:DF 3 "gpc_reg_operand" "")
+;; 	(mem:DF (match_dup 0)))]
+;;   "TARGET_HARD_FLOAT 
+;;     && peep2_reg_dead_p(2, operands[0])
+;;     && FP_REGNO_P (REGNO (operands[3]))"
+;;   [(set (match_dup 3) (mem:DF (lo_sum:SI (match_dup 1) (match_dup 2))))]
+;;   "")
+
+;; (define_peephole2
+;;   [(set (match_operand:SI 0 "gpc_reg_operand" "")
+;; 	(lo_sum:SI (match_operand:SI 1 "gpc_reg_operand" "") 
+;; 		   (match_operand:SI 2 "" "")))
+;;    (set (match_operand:DF 3 "gpc_reg_operand" "")
+;; 	(mem:DF (match_dup 0)))]
+;;   "TARGET_HARD_FLOAT 
+;;     && !peep2_reg_dead_p(2, operands[0])
+;;     && FP_REGNO_P (REGNO (operands[3]))"
+;;   [(set (match_dup 3) (mem:DF (lo_sum:SI (match_dup 1) (match_dup 2))))
+;;    (set (match_dup 0) (lo_sum:SI (match_dup 1) (match_dup 2)))]
+;;   "")
+
+;; (define_peephole2
+;;   [(set (match_operand:SI 0 "gpc_reg_operand" "")
+;; 	(lo_sum:SI (match_operand:SI 1 "gpc_reg_operand" "") 
+;; 		   (match_operand:SI 2 "" "")))
+;;    (set (match_operand:SF 3 "gpc_reg_operand" "")
+;; 	(mem:SF (match_dup 0)))]
+;;   "TARGET_HARD_FLOAT 
+;;     && peep2_reg_dead_p(2, operands[0])
+;;     && FP_REGNO_P (REGNO (operands[3]))"
+;;   [(set (match_dup 3) (mem:SF (lo_sum:SI (match_dup 1) (match_dup 2))))]
+;;   "")
+
+;; (define_peephole2
+;;   [(set (match_operand:SI 0 "gpc_reg_operand" "")
+;; 	(lo_sum:SI (match_operand:SI 1 "gpc_reg_operand" "") 
+;; 		   (match_operand:SI 2 "" "")))
+;;    (set (match_operand:SF 3 "gpc_reg_operand" "")
+;; 	(mem:SF (match_dup 0)))]
+;;   "TARGET_HARD_FLOAT 
+;;     && !peep2_reg_dead_p(2, operands[0])
+;;     && FP_REGNO_P (REGNO (operands[3]))"
+;;   [(set (match_dup 3) (mem:SF (lo_sum:SI (match_dup 1) (match_dup 2))))
+;;    (set (match_dup 0) (lo_sum:SI (match_dup 1) (match_dup 2)))]
+;;   "")
 
 ;; Next come insns related to the calling sequence.
 ;;
@@ -13826,8 +13902,8 @@
 
 (define_insn "altivec_vandc"
   [(set (match_operand:V4SI 0 "register_operand" "=v")
-        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
-                      (match_operand:V4SI 2 "register_operand" "v")] 43))]
+        (and:V4SI (match_operand:V4SI 1 "register_operand" "v")
+                  (not:V4SI (match_operand:V4SI 2 "register_operand" "v"))))]
   "TARGET_ALTIVEC"
   "vandc %0,%1,%2"
   [(set_attr "type" "vecsimple")])
@@ -13984,6 +14060,94 @@
   "vcmpgtfp %0,%1,%2"
   [(set_attr "type" "veccmp")])
 
+;; Fused multiply add
+(define_insn "altivec_vmaddfp"
+  [(set (match_operand:V4SF 0 "register_operand" "=v")
+	(plus:V4SF (mult:V4SF (match_operand:V4SF 1 "register_operand" "v")
+			      (match_operand:V4SF 2 "register_operand" "v"))
+	  	   (match_operand:V4SF 3 "register_operand" "v")))]
+  "TARGET_ALTIVEC"
+  "vmaddfp %0,%1,%2,%3"
+  [(set_attr "type" "vecfloat")])
+
+;; The unspec here is a vec splat of 0. We do multiply as a fused
+;; multiply-add with an add of a 0 vector. 
+
+(define_expand "mulv4sf3"
+  [(set (match_dup 3) (unspec:V4SF [(const_int 0)] 142))
+   (set (match_operand:V4SF 0 "register_operand" "=v")
+        (plus:V4SF (mult:V4SF (match_operand:V4SF 1 "register_operand" "v")
+	                      (match_operand:V4SF 2 "register_operand" "v"))
+		   (match_dup 3)))]
+  "TARGET_ALTIVEC && TARGET_FUSED_MADD"
+  "
+{ operands[3] = gen_reg_rtx (V4SFmode); }")
+
+;; Fused multiply subtract 
+(define_insn "altivec_vnmsubfp"
+  [(set (match_operand:V4SF 0 "register_operand" "=v")
+	(minus:V4SF (mult:V4SF (match_operand:V4SF 1 "register_operand" "v")
+			       (match_operand:V4SF 2 "register_operand" "v"))
+	  	    (match_operand:V4SF 3 "register_operand" "v")))]
+  "TARGET_ALTIVEC"
+  "vmmsubfp %0,%1,%2,%3"
+  [(set_attr "type" "vecfloat")])
+
+
+(define_insn "altivec_vmsumubm"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V16QI 1 "register_operand" "v")
+		      (match_operand:V16QI 2 "register_operand" "v")
+                      (match_operand:V4SI 3 "register_operand" "v")] 65))]
+  "TARGET_ALTIVEC"
+  "vmsumubm %0, %1, %2, %3"
+  [(set_attr "type" "veccomplex")])
+
+(define_insn "altivec_vmsummbm"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V16QI 1 "register_operand" "v")
+		      (match_operand:V16QI 2 "register_operand" "v")
+                      (match_operand:V4SI 3 "register_operand" "v")] 66))]
+  "TARGET_ALTIVEC"
+  "vmsumubm %0, %1, %2, %3"
+  [(set_attr "type" "veccomplex")])
+
+(define_insn "altivec_vmsumuhm"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V8HI 1 "register_operand" "v")
+		      (match_operand:V8HI 2 "register_operand" "v")
+                      (match_operand:V4SI 3 "register_operand" "v")] 67))]
+  "TARGET_ALTIVEC"
+  "vmsumuhm %0, %1, %2, %3"
+  [(set_attr "type" "veccomplex")])
+
+(define_insn "altivec_vmsumshm"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V8HI 1 "register_operand" "v")
+		      (match_operand:V8HI 2 "register_operand" "v")
+                      (match_operand:V4SI 3 "register_operand" "v")] 68))]
+  "TARGET_ALTIVEC"
+  "vmsumshm %0, %1, %2, %3"
+  [(set_attr "type" "veccomplex")])
+
+(define_insn "altivec_vmsumuhs"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V8HI 1 "register_operand" "v")
+		      (match_operand:V8HI 2 "register_operand" "v")
+                      (match_operand:V4SI 3 "register_operand" "v")] 69))]
+  "TARGET_ALTIVEC"
+  "vmsumuhs %0, %1, %2, %3"
+  [(set_attr "type" "veccomplex")])
+
+(define_insn "altivec_vmsumshs"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V8HI 1 "register_operand" "v")
+		      (match_operand:V8HI 2 "register_operand" "v")
+                      (match_operand:V4SI 3 "register_operand" "v")] 70))]
+  "TARGET_ALTIVEC"
+  "vmsumshs %0, %1, %2, %3"
+  [(set_attr "type" "veccomplex")])
+
 (define_insn "umaxv16qi3"
   [(set (match_operand:V16QI 0 "register_operand" "=v")
         (umax:V16QI (match_operand:V16QI 1 "register_operand" "v")
@@ -14040,50 +14204,137 @@
   "vmaxfp %0,%1,%2"
   [(set_attr "type" "veccmp")])
 
+(define_insn "altivec_vmhaddshs"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+		      (match_operand:V8HI 2 "register_operand" "v")
+                      (match_operand:V8HI 3 "register_operand" "v")] 71))]
+  "TARGET_ALTIVEC"
+  "vmhaddshs %0, %1, %2, %3"
+  [(set_attr "type" "veccomplex")])
+(define_insn "altivec_vmhraddshs"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+		      (match_operand:V8HI 2 "register_operand" "v")
+                      (match_operand:V8HI 3 "register_operand" "v")] 72))]
+  "TARGET_ALTIVEC"
+  "vmhraddshs %0, %1, %2, %3"
+  [(set_attr "type" "veccomplex")])
+(define_insn "altivec_vmladduhm"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+		      (match_operand:V8HI 2 "register_operand" "v")
+                      (match_operand:V8HI 3 "register_operand" "v")] 73))]
+  "TARGET_ALTIVEC"
+  "vmladduhm %0, %1, %2, %3"
+  [(set_attr "type" "veccomplex")])
+
 (define_insn "altivec_vmrghb"
   [(set (match_operand:V16QI 0 "register_operand" "=v")
-        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
-                       (match_operand:V16QI 2 "register_operand" "v")] 70))]
+        (vec_merge:V16QI (vec_select:V16QI (match_operand:V16QI 1 "register_operand" "v")
+					   (parallel [(const_int 8)
+					   	      (const_int 9)
+					   	      (const_int 10)
+					   	      (const_int 11)
+					   	      (const_int 12)
+					   	      (const_int 13)
+						      (const_int 14)
+						      (const_int 15)
+					   	      (const_int 0)
+					   	      (const_int 1)
+					   	      (const_int 2)
+					   	      (const_int 3)
+					   	      (const_int 4)
+					   	      (const_int 5)
+					   	      (const_int 6)
+						      (const_int 7)]))
+                      (match_operand:V16QI 2 "register_operand" "v")
+		      (const_int 255)))]
   "TARGET_ALTIVEC"
   "vmrghb %0,%1,%2"
   [(set_attr "type" "vecperm")])
 
 (define_insn "altivec_vmrghh"
   [(set (match_operand:V8HI 0 "register_operand" "=v")
-        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
-                      (match_operand:V8HI 2 "register_operand" "v")] 71))]
+        (vec_merge:V8HI (vec_select:V8HI (match_operand:V8HI 1 "register_operand" "v")
+					   (parallel [(const_int 4)
+					   	      (const_int 5)
+					   	      (const_int 6)
+					   	      (const_int 7)
+					   	      (const_int 0)
+					   	      (const_int 1)
+					   	      (const_int 2)
+					   	      (const_int 3)]))
+                      (match_operand:V8HI 2 "register_operand" "v")
+		      (const_int 15)))]
   "TARGET_ALTIVEC"
   "vmrghh %0,%1,%2"
   [(set_attr "type" "vecperm")])
 
 (define_insn "altivec_vmrghw"
   [(set (match_operand:V4SI 0 "register_operand" "=v")
-        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
-                      (match_operand:V4SI 2 "register_operand" "v")] 72))]
+        (vec_merge:V4SI (vec_select:V4SI (match_operand:V4SI 1 "register_operand" "v")
+					 (parallel [(const_int 2)
+					 	    (const_int 3)
+						    (const_int 0)
+						    (const_int 1)]))
+                      (match_operand:V4SI 2 "register_operand" "v")
+		      (const_int 12)))]
   "TARGET_ALTIVEC"
   "vmrghw %0,%1,%2"
   [(set_attr "type" "vecperm")])
 
 (define_insn "altivec_vmrglb"
   [(set (match_operand:V16QI 0 "register_operand" "=v")
-        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
-                       (match_operand:V16QI 2 "register_operand" "v")] 73))]
+        (vec_merge:V16QI (vec_select:V16QI (match_operand:V16QI 2 "register_operand" "v")
+					   (parallel [(const_int 8)
+					   	      (const_int 9)
+					   	      (const_int 10)
+					   	      (const_int 11)
+					   	      (const_int 12)
+					   	      (const_int 13)
+						      (const_int 14)
+						      (const_int 15)
+					   	      (const_int 0)
+					   	      (const_int 1)
+					   	      (const_int 2)
+					   	      (const_int 3)
+					   	      (const_int 4)
+					   	      (const_int 5)
+					   	      (const_int 6)
+						      (const_int 7)]))
+                      (match_operand:V16QI 1 "register_operand" "v")
+		      (const_int 255)))]
   "TARGET_ALTIVEC"
   "vmrglb %0,%1,%2"
   [(set_attr "type" "vecperm")])
 
 (define_insn "altivec_vmrglh"
   [(set (match_operand:V8HI 0 "register_operand" "=v")
-        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
-                      (match_operand:V8HI 2 "register_operand" "v")] 74))]
+        (vec_merge:V8HI (vec_select:V8HI (match_operand:V8HI 2 "register_operand" "v")
+					   (parallel [(const_int 4)
+					   	      (const_int 5)
+					   	      (const_int 6)
+					   	      (const_int 7)
+					   	      (const_int 0)
+					   	      (const_int 1)
+					   	      (const_int 2)
+					   	      (const_int 3)]))
+                      (match_operand:V8HI 1 "register_operand" "v")
+		      (const_int 15)))]
   "TARGET_ALTIVEC"
   "vmrglh %0,%1,%2"
   [(set_attr "type" "vecperm")])
 
 (define_insn "altivec_vmrglw"
   [(set (match_operand:V4SI 0 "register_operand" "=v")
-        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
-                      (match_operand:V4SI 2 "register_operand" "v")] 75))]
+        (vec_merge:V4SI (vec_select:V4SI (match_operand:V4SI 2 "register_operand" "v")
+					 (parallel [(const_int 2)
+					 	    (const_int 3)
+						    (const_int 0)
+						    (const_int 1)]))
+                      (match_operand:V4SI 1 "register_operand" "v")
+		      (const_int 12)))]
   "TARGET_ALTIVEC"
   "vmrglw %0,%1,%2"
   [(set_attr "type" "vecperm")])
@@ -14575,3 +14826,98 @@
   "TARGET_ALTIVEC"
   "vxor %0,%1,%2"
   [(set_attr "type" "vecsimple")])
+
+(define_insn "altivec_vspltb"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+                       (match_operand:QI 2 "immediate_operand" "i")] 136))]
+  "TARGET_ALTIVEC"
+  "vspltb %0,%1,%2"
+  [(set_attr "type" "vecperm")])
+(define_insn "altivec_vsplth"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+                      (match_operand:QI 2 "immediate_operand" "i")] 137))]
+  "TARGET_ALTIVEC"
+  "vsplth %0,%1,%2"
+  [(set_attr "type" "vecperm")])
+
+(define_insn "altivec_vspltw"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+                      (match_operand:QI 2 "immediate_operand" "i")] 138))]
+  "TARGET_ALTIVEC"
+  "vspltw %0,%1,%2"
+  [(set_attr "type" "vecperm")])
+
+(define_insn "altivec_vspltisb"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+        (unspec:V16QI [(match_operand:QI 1 "immediate_operand" "i")] 139))]
+  "TARGET_ALTIVEC"
+  "vspltisb %0, %1"
+  [(set_attr "type" "vecsimple")])
+
+
+(define_insn "altivec_vspltish"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+        (unspec:V8HI [(match_operand:QI 1 "immediate_operand" "i")] 140))]
+  "TARGET_ALTIVEC"
+  "vspltish %0, %1"
+  [(set_attr "type" "vecsimple")])
+
+(define_insn "altivec_vspltisw"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+        (unspec:V4SI [(match_operand:QI 1 "immediate_operand" "i")] 141))]
+  "TARGET_ALTIVEC"
+  "vspltisw %0, %1"
+  [(set_attr "type" "vecsimple")])
+
+(define_insn ""
+  [(set (match_operand:V4SF 0 "register_operand" "=v")
+        (unspec:V4SF [(match_operand:QI 1 "immediate_operand" "i")] 142))]
+  "TARGET_ALTIVEC"
+  "vspltisw %0, %1"
+  [(set_attr "type" "vecsimple")])
+
+(define_insn "ftruncv4sf2"
+   [(set (match_operand:V4SF 0 "register_operand" "=v")
+   	 (fix:V4SF (match_operand:V4SF 1 "register_operand" "v")))]
+   "TARGET_ALTIVEC"
+   "vrfiz %0, %1"
+   [(set_attr "type" "vecfloat")])
+
+(define_insn "altivec_vperm_4si"
+  [(set (match_operand:V4SI 0 "register_operand" "=v")
+	(unspec:V4SI [(match_operand:V4SI 1 "register_operand" "v")
+		      (match_operand:V4SI 2 "register_operand" "v")
+		      (match_operand:V16QI 3 "register_operand" "v")] 144))]
+  "TARGET_ALTIVEC"
+  "vperm %0,%1,%2,%3"
+  [(set_attr "type" "vecperm")])
+
+(define_insn "altivec_vperm_4sf"
+  [(set (match_operand:V4SF 0 "register_operand" "=v")
+	(unspec:V4SF [(match_operand:V4SF 1 "register_operand" "v")
+		      (match_operand:V4SF 2 "register_operand" "v")
+		      (match_operand:V16QI 3 "register_operand" "v")] 145))]
+  "TARGET_ALTIVEC"
+  "vperm %0,%1,%2,%3"
+  [(set_attr "type" "vecperm")])
+
+(define_insn "altivec_vperm_8hi"
+  [(set (match_operand:V8HI 0 "register_operand" "=v")
+	(unspec:V8HI [(match_operand:V8HI 1 "register_operand" "v")
+		      (match_operand:V8HI 2 "register_operand" "v")
+		      (match_operand:V16QI 3 "register_operand" "v")] 146))]
+  "TARGET_ALTIVEC"
+  "vperm %0,%1,%2,%3"
+  [(set_attr "type" "vecperm")])
+
+(define_insn "altivec_vperm_16qi"
+  [(set (match_operand:V16QI 0 "register_operand" "=v")
+	(unspec:V16QI [(match_operand:V16QI 1 "register_operand" "v")
+		       (match_operand:V16QI 2 "register_operand" "v")
+		       (match_operand:V16QI 3 "register_operand" "v")] 147))]
+  "TARGET_ALTIVEC"
+  "vperm %0,%1,%2,%3"
+  [(set_attr "type" "vecperm")])
