--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-05  Ed Schonberg <schonber@gnat.com>
+
+	* sem_ch3.adb (Analyze_Object_Declaration): If expression is an 
+	aggregate with static wrong size, attach generated Raise node to 
+	declaration.
+
 2001-12-05  Robert Dewar <dewar@gnat.com>
 
 	* sem_attr.adb (Analyze_Attribute): Defend against bad Val attribute. 
