2001-12-05  William Cohen  <wcohen@redhat.com>
	* config/arm/arm.h (THUMB_FUNCTION_PROFILER): Correct typo in
	instruction.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47689 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-05  William Cohen  <wcohen@redhat.com>
+
+	* config/arm/arm.h (THUMB_FUNCTION_PROFILER): Correct typo in
+	instruction.
+
 2001-12-05  Daniel Berlin  <dan@cgsoftware.com>
 
 	* config/rs6000/rs6000.h (enum rs6000_builtins): Add more altivec
