* Makefile.in (STMP_FIXPROTO, STMP_FIXINC): Use substituted values 	from autoconf.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47695 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-05  Andreas Schwab  <schwab@suse.de>
+
+	* Makefile.in (STMP_FIXPROTO, STMP_FIXINC): Use substituted values
+	from autoconf.
+
 2001-12-05  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	* config.gcc: Include arm/xscale-coff.h before arm/arm.h.
