--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2001-12-05  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* c-common.c (shadow_warning): New function, moved from cp/decl.c.
+	* c-common.h (shadow_warning): New.
+	* c-decl.c: Include c-common.h.
+	(warn_if_shadowing): New, broken out of pushdecl.
+	(pushdecl): Use warn_if_shadowing.
+	(store_parm_decls): Prevent duplicate -Wshadow warnings.
+
 Wed Dec  5 17:59:19 2001  Douglas B. Rupp  <rupp@gnat.com>
 
 	* config/alpha/vms.h (SIZE_TYPE, PTRDIFF_TYPE): Remove, were disabled.
