--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-05  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* gcc.dg/Wshadow-1.c: New test.
+
 2001-12-05  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/compile/20011130-1.c: New test.
