* langhooks.h (struct lang_hooks_for_tree_inlining): Add         start_inlining, end_inlining.         * tree-inline.c (expand_call_inline): Call them.         * langhooks-def.h (LANG_HOOKS_TREE_INLINING_START_INLINING): Define.         (LANG_HOOKS_TREE_INLINING_END_INLINING): Define.         (LANG_HOOKS_TREE_INLINING_INITIALIZER): Add them.         * langhooks.c (lhd_tree_inlining_start_inlining): New fn.         (lhd_tree_inlining_end_inlining): New fn.
        * cp-lang.c (LANG_HOOKS_TREE_INLINING_START_INLINING): Define.
        (LANG_HOOKS_TREE_INLINING_END_INLINING): Define.
        * tree.c (cp_start_inlining, cp_end_inlining): New fns.
        * pt.c (push_tinst_level): No longer static.
        * cp-tree.h: Declare them.

        * init.c (resolve_offset_ref): Don't check access for the base
        conversion to access a FIELD_DECL.

        * cp-tree.h (TYPE_REFFN_P): New macro.
        * decl.c (bad_specifiers): Check it, too.

        * rtti.c (create_pseudo_type_info): Set CLASSTYPE_INTERFACE_ONLY
        on the __*_type_info type if we haven't seen a definition.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47703 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2001-12-04  Jason Merrill  <jason@redhat.com>
+
+	* langhooks.h (struct lang_hooks_for_tree_inlining): Add
+	start_inlining, end_inlining.
+	* tree-inline.c (expand_call_inline): Call them.
+	* langhooks-def.h (LANG_HOOKS_TREE_INLINING_START_INLINING): Define.
+	(LANG_HOOKS_TREE_INLINING_END_INLINING): Define.
+	(LANG_HOOKS_TREE_INLINING_INITIALIZER): Add them.
+	* langhooks.c (lhd_tree_inlining_start_inlining): New fn.
+	(lhd_tree_inlining_end_inlining): New fn.
+
 2001-12-05  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* c-common.c (shadow_warning): New function, moved from cp/decl.c.
