--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-05  David O'Brien  <obrien@FreeBSD.org>
+
+	* config.gcc (powerpc-*-freebsd*): Use the proper tmake_file files,
+	as set by the generic FreeBSD configure framework.
+
 2001-12-04  Jason Merrill  <jason@redhat.com>
 
 	* langhooks.h (struct lang_hooks_for_tree_inlining): Add
