Pass pointer to RTX when calling alter_subreg().
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47717 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-06  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* config/arm/arm.c (load_multiple_sequence): 
+
 Thu Dec  6 06:55:13 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* function.c (assing_parms): Fix typo in last change.
