ooops - omitted text of ChangeLog entry
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47718 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,6 +1,9 @@
 2001-12-06  Nick Clifton  <nickc@cambridge.redhat.com>
 
-	* config/arm/arm.c (load_multiple_sequence): 
+	* config/arm/arm.c (load_multiple_sequence): Pass pointer to
+        RTX when calling alter_subreg().
+	(store_multiple_sequence): Pass pointer to RTX when calling
+        alter_subreg().
 
 Thu Dec  6 06:55:13 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
