Restore definition of STRUCT_VALUE_REGNUM,
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47721 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-06  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* config/arm/arm.h (STRUCT_VALUE): Suppress definition.
+	(STRUCT_VALUE_REGNUM): Restore definition.
+
 2001-12-06  Andrew MacLeod <amacleod@redhat.com>
 
 	* flow.c (find_regno_partial): Return register, not the expression
