--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-06  Zack Weinberg  <zack@codesourcery.com>
+
+	* cppfiles.c (open_file): If we've opened a directory by
+	mistake, close it.
+	(find_include_file): Avoid turning / into // or // into ///.
+
 2001-12-06  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	* config/arm/arm.h (STRUCT_VALUE): Suppress definition.
