--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-06  David O'Brien  <obrien@FreeBSD.org>
+
+	* config.gcc: Include dbxelf.h before elfos.h.
+	* elfos.h: Don't include dbxelf.h, let config.gcc handle it.
+
 2001-12-06  Zack Weinberg  <zack@codesourcery.com>
 
 	* cppfiles.c (open_file): If we've opened a directory by
