2001-12-06  H.J. Lu <hjl@gnu.org>
	* Makefile.in (.po.gmo): Use "-mkdir po" for parallel build.
	(.po.pox): Likewise.
	(o/$(PACKAGE).pot): Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47724 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-06  H.J. Lu <hjl@gnu.org>
+
+	* Makefile.in (.po.gmo): Use "-mkdir po" for parallel build.
+	(.po.pox): Likewise.
+	(o/$(PACKAGE).pot): Likewise.
+
 2001-12-06  David O'Brien  <obrien@FreeBSD.org>
 
 	* config.gcc: Include dbxelf.h before elfos.h.
