* tree.c (get_callee_fndecl): Move DECL_ABSTRACT_ORIGIN-following... * tree-inline.c (expand_call_inline): ... here.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47725 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-06  Alexandre Oliva  <aoliva@redhat.com>
+
+	* tree.c (get_callee_fndecl): Move DECL_ABSTRACT_ORIGIN-following...
+	* tree-inline.c (expand_call_inline): ... here.
+
 2001-12-06  H.J. Lu <hjl@gnu.org>
 
 	* Makefile.in (.po.gmo): Use "-mkdir po" for parallel build.
