2001-12-06  H.J. Lu <hjl@gnu.org>
	* Makefile.in (.po.gmo): Use "-test -d po || mkdir po" to
	reduce noise.
	(.po.pox): Likewise.
	(o/$(PACKAGE).pot): Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47726 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2001-12-06  H.J. Lu <hjl@gnu.org>
+
+	* Makefile.in (.po.gmo): Use "-test -d po || mkdir po" to
+	reduce noise.
+	(.po.pox): Likewise.
+	(o/$(PACKAGE).pot): Likewise.
+
 2001-12-06  Alexandre Oliva  <aoliva@redhat.com>
 
 	* tree.c (get_callee_fndecl): Move DECL_ABSTRACT_ORIGIN-following...
