* langhooks.c (lhd_staticp): Mark parameter with ATTRIBUTE_UNUSED.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47727 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-06  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* langhooks.c (lhd_staticp): Mark parameter with
+	ATTRIBUTE_UNUSED.
+
 2001-12-06  H.J. Lu <hjl@gnu.org>
 
 	* Makefile.in (.po.gmo): Use "-test -d po || mkdir po" to
